test/seq/cmdlists/invalid_wait.err
SyntaxError: Invalid wait command: expecting `(`
Line: 3, Column: 5
wait-
    ^
